Fixed some bugs for IE v1

--- a/web/sass/main.sass
+++ b/web/sass/main.sass
@@ -13,14 +13,16 @@ body textarea:focus:required:invalid
 body input:focus:required:invalid, body textarea:focus:required:invalid
 	color: #000
 
+html
+	height: auto
 html, body
 	min-height: 100%
 	width: 100%
 	font-size: 16px
 	margin: 0
 	padding: 0
-	height: 100%
 body
+	height: 100%
 	min-width: 320px
 	position: relative
 	line-height: 1.65
