--- a/web/sass/sections/_customers.sass
+++ b/web/sass/sections/_customers.sass
@@ -1,14 +1,15 @@
-
+.customers
 .customersBoxWrap
-	min-height: 430px
+	margin-top: 60px
+	min-height: 400px
 	width: 100%
 	overflow: hidden
 .customersBox
+	overflow: hidden
 	padding-bottom: 20px
 	&__title
 		text-align: center
 		color: #222328
-		margin-top: 65px
 		font-size: 32px
 		font-family: 'Montserrat Black', sans-serif
 	&__subtitle
