--- a/web/sass/sections/_products.sass
+++ b/web/sass/sections/_products.sass
@@ -3,7 +3,6 @@
 	background-color: #e4e5e7
 	padding-bottom: 50px
 .products
-
 .customLineWrap
 	display: -webkit-flex
 	display: -moz-flex
@@ -276,7 +275,10 @@
 		display: flex
 		justify-content: center
 		align-items: center
+		width: 100%
 	&__img
+		flex: 0 0 auto
+		object-fit: scale-down
 		display: inline-block
 		width: auto
 		height: auto
