--- a/web/sass/sections/_searchAndLogin.sass
+++ b/web/sass/sections/_searchAndLogin.sass
@@ -45,6 +45,10 @@
 			border: 2px solid #babac0
 			border-left: none
 	&__btnIcon
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
 		width: 16px
 		height: 16px
 		fill: #343e5c
