--- a/web/sass/sections/_pagination.sass
+++ b/web/sass/sections/_pagination.sass
@@ -29,10 +29,12 @@
 		border-right: 2px solid #f0f2f7
 		border-radius: 5px 0 0 5px
 		left: 0
+		top: 0
 		&:hover
 			box-shadow: -2px 0 10px #b9bed1
 	&__rightArrow
 		right: 0
+		top: 0
 		border-left: 2px solid #f0f2f7
 		border-radius: 0 5px 5px 0
 		&:hover
@@ -60,9 +62,11 @@
 		display: flex
 		&:first-child
 			position: absolute
+			top: 0
 			left: 0
 		&:last-child
 			position: absolute
+			top: 0
 			right: 0
 	&__link
 		font-family: 'Montserrat Bold', sans-serif
