Pushed footer to bottom of the page

--- a/web/sass/main.sass
+++ b/web/sass/main.sass
@@ -14,7 +14,7 @@ body input:focus:required:invalid, body textarea:focus:required:invalid
 	color: #000
 
 html
-	height: auto
+	height: 100%
 html, body
 	min-height: 100%
 	width: 100%
@@ -62,6 +62,9 @@ h1,h2,h3,h4,h5,h6,p
 	display: flex
 	height: 100%
 	flex-direction: column
+
+.content
+	flex: 1 0 auto
 
 	
 @import "sections/header"
