Fixed bug while checkout

--- a/web/sass/sections/_orders.sass
+++ b/web/sass/sections/_orders.sass
@@ -57,6 +57,10 @@
 		background-color: #00e2aa
 		width: 140px
 		transition: background-color .3s
+		&-inactive
+			background-color: grey !important
+			&:hover,&:active
+				background-color: grey !important 
 		&:hover,&:active
 			background-color: darken(#00e2aa, 4%)
 .infoTable
