Fixed bug related to login box for mobile

--- a/web/sass/_media.sass
+++ b/web/sass/_media.sass
@@ -172,11 +172,11 @@
 	.mobileSearch .searchBox-mobile
 		height: 35px
 	.mobileCartAndLogin 
-		.loginBox
+		.loginBoxMobile
 			height: 35px
 			width: 35px
 			border-radius: 6px
-		.loginBox__user
+		.loginBoxMobile__user
 			width: 25px
 			height: 25px
 		.basketCart
