--- a/web/sass/_media.sass
+++ b/web/sass/_media.sass
@@ -25,7 +25,6 @@
 	.searchAndLoginBox
 		display: none
 	.customLine
-		
 	.accordionCategories
 		display: none
 	.productsSet
@@ -42,6 +41,15 @@
 		margin-bottom: 30px
 	.orders__totalLeft
 		max-width: 70%
+	.characteristics__td
+		width: 50%
+		text-align: center
+	.characteristics__td:first-child
+		width: 50%
+		text-align: left
+		padding-left: 5px
+	.productWrap
+		padding-bottom: 0
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	.sliderTopWrap
