--- a/web/sass/sections/_product.sass
+++ b/web/sass/sections/_product.sass
@@ -22,6 +22,13 @@
 		margin-top: 10px
 		margin-bottom: 20px
 		font-size: 30px
+	&__linkingLink
+		font-family: 'Montserrat Regular', sans-serif
+		font-weight: bold
+		text-decoration: underline
+	&__linkingAngle
+		padding-left: 5px
+		padding-right: 5px
 .productSlider
 	border-radius: 6px
 	background-color: #fff
@@ -43,6 +50,13 @@
 		max-width: 100%
 		height: 66px !important
 	&__imgWrap
+		display: -webkit-flex
+		display: -moz-flex
+		display: -ms-flex
+		display: -o-flex
+		display: flex
+		justify-content: center
+		align-items: center
 		text-align: center
 		width: 75%
 		height: 400px
