--- a/web/sass/sections/_adminOrders.sass
+++ b/web/sass/sections/_adminOrders.sass
@@ -26,9 +26,10 @@
 		&-subtable
 			margin: 0
 	&__tr
-		&-subtr:first-child
-
-
+		&-none
+			display: none
+		&-subtrwrap
+			border: 1px solid #a9a5a5
 	&__td
 		padding-left: 15px
 		padding-right: 15px
@@ -50,8 +51,6 @@
 			text-align: center
 		&-center
 			text-align: center
-		&-none
-			display: none
 	&__input
 		height: 25px
 		width: 170px
