--- a/web/sass/_media.sass
+++ b/web/sass/_media.sass
@@ -15,8 +15,6 @@
 		margin-top: 20px
 	.footerSocIcons__wrap
 		margin-top: 15px
-	.paginationBox__items
-		width: 220px
 	.paginationBox__leftArrow, .paginationBox__rightArrow
 		width: 120px
 	.sliderTop__item-1
@@ -70,8 +68,10 @@
 				left: -10px
 			.owl-next
 				right: -10px
+	.customersBoxWrap
+		margin-top: 0
 	.customersBox__title
-		margin-top: 30px
+		margin-top: 20px
 	.customersBox__subtitle
 		margin-top: 15px
 	.customersBox__itemWrap
@@ -172,6 +172,8 @@
 	.orders__totalLeft
 		max-width: 100%
 		text-align: center
+	.paginationBox__leftArrow, .paginationBox__rightArrow
+		width: 80px
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 576px)
 	.hamburger__line
@@ -228,7 +230,7 @@
 		font-size: 16px
 
 	.paginationBox__leftArrow, .paginationBox__rightArrow
-		width: 60px
+		width: 40px
 	.paginationBox__link
 		margin-left: 5px
 		margin-right: 5px
@@ -269,3 +271,7 @@
 	.popupRegisterBox__messageItem
 		width: 90%
 		margin: 0 auto
+	.paginationBox__link
+		width: 20px
+		height: 20px
+		line-height: 17px
