--- a/web/sass/_fonts.sass
+++ b/web/sass/_fonts.sass
@@ -1,23 +1,23 @@
 @font-face 
     font-family: 'Montserrat Regular'
-    src: url('../fonts/Montserrat/Montserrat-Regular.ttf') format('woff2'),
-    url('../fonts/Montserrat/Montserrat-Regular.ttf') format('woff'),
+    src: url('../fonts/Montserrat/Montserrat-Regular.woff2') format('woff2'),
+    url('../fonts/Montserrat/Montserrat-Regular.woff') format('woff'),
     url('../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype')
     font-weight: normal
     font-style: normal
 
 @font-face 
     font-family: 'Montserrat Bold'
-    src: url('../fonts/Montserrat/Montserrat-Bold.ttf') format('woff2'),
-    url('../fonts/Montserrat/Montserrat-Bold.ttf') format('woff'),
+    src: url('../fonts/Montserrat/Montserrat-Bold.woff2') format('woff2'),
+    url('../fonts/Montserrat/Montserrat-Bold.woff') format('woff'),
     url('../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype')
     font-weight: normal
     font-style: normal
 
 @font-face 
     font-family: 'Montserrat Black'
-    src: url('../fonts/Montserrat/Montserrat-Black.ttf') format('woff2'),
-    url('../fonts/Montserrat/Montserrat-Black.ttf') format('woff'),
+    src: url('../fonts/Montserrat/Montserrat-Black.woff2') format('woff2'),
+    url('../fonts/Montserrat/Montserrat-Black.woff') format('woff'),
     url('../fonts/Montserrat/Montserrat-Black.ttf') format('truetype')
     font-weight: normal
     font-style: normal
